--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
 spring.application.name=niles
+
+server.port=8080
+server.shutdown=graceful
+spring.datasource.url=jdbc:postgresql://dpg-cu5sqmaj1k6c73f1kb30-a.singapore-postgres.render.com:5432/niles
+spring.datasource.username=koushan007
+spring.datasource.password=dWq0V3YWUKXGyozDjKsZzp3g3JLfTfrd
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.thymeleaf.cache=false
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.jpa.properties.hibernate.format_sql=true
+spring.session.store-type=jdbc
+spring.session.jdbc.initialize-schema=always
+cloudinary.cloud-name=dguueg6wi
+cloudinary.api-secret=enPeMRvSiwJ4Cg_D8Ri0Wyvmb8A
+cloudinary.api-key=757897191326121
+server.forward-headers-strategy=FRAMEWORK
