--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,18 +2,17 @@ spring.application.name=niles
 
 server.port=8080
 server.shutdown=graceful
-spring.datasource.url=jdbc:postgresql://dpg-cu5sqmaj1k6c73f1kb30-a.singapore-postgres.render.com:5432/niles
-spring.datasource.username=koushan007
-spring.datasource.password=dWq0V3YWUKXGyozDjKsZzp3g3JLfTfrd
+spring.datasource.url=jdbc:postgresql://ec2-3-110-46-161.ap-south-1.compute.amazonaws.com:5432/niles
+spring.datasource.username=postgres
+spring.datasource.password=24103832
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.jpa.properties.hibernate.format_sql=true
-spring.session.store-type=jdbc
 spring.session.jdbc.initialize-schema=always
 cloudinary.cloud-name=dguueg6wi
 cloudinary.api-secret=enPeMRvSiwJ4Cg_D8Ri0Wyvmb8A
